# deepml-cli

./: README.md  pyproject.toml
src/deepml_cli/: __main__.py  cli.py  fetch.py
